--- a/r-shiny/otel-config_r-shiny.yaml
+++ b/r-shiny/otel-config_r-shiny.yaml
@@ -8,19 +8,16 @@ receivers:
             - targets: ['localhost:8000']
 
 processors:
-  metricstransform/plumber:
+  metricstransform/shiny:
     transforms:
-      include: http_request_duration_seconds
+      include: shiny_flush_duration_seconds
       action: update
       new_name: http.server.duration
       operations:
         - action: experimental_scale_value
           experimental_scale: 1000
-        - action: update_label
-          label: path
-          new_label: http.target
 
-  attributes/plumber:
+  attributes/shiny:
     actions:
       - key: service.instance.id
         action: insert
@@ -39,5 +36,5 @@ service:
   pipelines:
     metrics:
       receivers: [prometheus]
-      processors: [metricstransform/plumber, attributes/plumber]
+      processors: [metricstransform/shiny, attributes/shiny]
       exporters: [otlp]
